Overall webapp style

--- a/views/templates/index.jade
+++ b/views/templates/index.jade
@@ -1,5 +1,8 @@
 main
-  .jumbotron
+  .jumbotron.inverse
     .container
       h1= t("app.home.title")
       p.lead= t("app.home.pitch")
+  .jumbo-bar
+    .container
+      p= t("app.home.tyrion")
