--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -1,16 +1,23 @@
 body {
   margin:0;
-  color: #5C5C5C;
-  font-family: 'PT Sans', Helvetica, serif;
   font-size: 14px;
-  background-color: #F5F5F5;
 }
 
 main .jumbotron {
   text-align: center;
+  margin-bottom: 0;
 
   h1 {
     text-transform: lowercase;
     font-variant: small-caps;
   }
+}
+
+.jumbo-bar {
+  text-align: center;
+  background-color: @thirdBrandColor;
+  padding-bottom: 10px;
+  padding-top: 20px;
+  margin-bottom: 20px;
+  font-weight: bold;
 }
