--- a/src/less/includes/main.less
+++ b/src/less/includes/main.less
@@ -1,10 +1,10 @@
 @mainBrandColor: #2D97CC;
 @secondBrandColor: #296796;
-@thirdBrandColor: #DAE6E7;
+@thirdBrandColor: lighten(@mainBrandColor, 40%);
 @inverseBrandColor: #FFFFFF;
 
 @linkColor: @mainBrandColor;
-@linkHoverColor: darken(@linkColor, 10%);
+@linkHoverColor: darken(@linkColor, 15%);
 @textColor: #5C5C5C;
 @headingsColor: @secondBrandColor;
 
