--- a/views/templates/index.jade
+++ b/views/templates/index.jade
@@ -12,26 +12,26 @@ main
         form(name="eventForm" ng-submit="model.createEvent(model.event)" novalidate="")
           .row
             .col-sm-10.col-sm-offset-1
-              .form-group
+              .form-group(element-validation="eventForm.eventName")
                 label(for="inputEventName") * Event name
                 input#inputEventName.form-control.input-lg(type="text" ng-model="model.event.name" name="eventName"
                     placeholder="Weekend at the beach" required="")
           .row(ng-cloak="" ng-repeat="participant in model.event.participants")
             .col-sm-4.col-sm-offset-1
-              .form-group
+              .form-group(element-validation="eventForm.participant{{$index}}Name")
                 label(for="inputParticipantName" ng-if="$first") * Participant name
                 input#inputParticipantName.form-control.input-lg(type="text" ng-model="participant.name"
-                    name="participantName" placeholder="Rasheed" required="")
+                    name="participant{{$index}}Name" placeholder="Rasheed" required="")
             .col-sm-4
               .form-group
                 label(for="inputParticipantEmail" ng-if="$first") Participant email
                 input#inputParticipantEmail.form-control.input-lg(type="email" ng-model="participant.email"
                     placeholder="rasheed@email.com")
             .col-sm-2
-              .form-group
+              .form-group(element-validation="eventForm.participant{{$index}}Share")
                 label(for="inputParticipantShare" ng-if="$first") * Share
                 input#inputParticipantShare.form-control.input-lg(type="number" ng-model="participant.share"
-                    name="participantShare" required="")
+                    name="participant{{$index}}Share" required="" min="1")
             .col-sm-1(ng-if="!$first")
               .form-group
                 button.btn.btn-danger.btn-lg(type="button" aria-label="Remove participant"
@@ -42,12 +42,12 @@ main
               .form-group.text-right
                 button.btn.btn-default.btn-lg(type="button" ng-click="model.addParticipant()") Add a participant
           .row
-            .col-sm-1.col-sm-offset-1
+            .col-sm-10.col-sm-offset-1
               .alert.alert-danger(ng-cloak="", ng-if="model.errors")
                 div(ng-repeat="error in model.errors") {{error.message}}
           .row
             .col-sm-10.col-sm-offset-1
               .form-group
-                button.btn.btn-block.btn-primary.btn-lg(type="submit") Create the event
+                button.btn.btn-block.btn-primary.btn-lg(type="submit" ng-disabled="eventForm.$invalid || eventForm.$untouched") Create the event
               p.help-block * Field required
               p.help-block Emails are used to send reminders and nothing else
