--- a/src/less/includes/main.less
+++ b/src/less/includes/main.less
@@ -16,10 +16,11 @@ body {
 
 a {
   color: @mainBrandColor;
-}
-a:hover,
-a:focus {
-  color: @linkHoverColor;
+
+  &:hover,
+  &:focus {
+    color: @linkHoverColor;
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
