--- a/views/index.jade
+++ b/views/index.jade
@@ -4,5 +4,6 @@ block content
     ng-view
 
 block js
+  script(src="/i18next/i18next.js")
   script(src=revision("/genere/js/vendor.js"))
   script(src=revision("/genere/js/app.js"))
