--- a/views/templates/index.jade
+++ b/views/templates/index.jade
@@ -47,13 +47,13 @@ main
                   = t("app.home.event_form.add_participant")
           .row
             .col-sm-10.col-sm-offset-1
-              .alert.alert-danger(ng-cloak="", ng-if="model.errors")
-                div(ng-repeat="error in model.errors") {{error.message}}
+              .alert.alert-danger.text-center(ng-cloak="" ng-if="model.errors")
+                div(ng-repeat="error in model.errors" ng-i18next="app.home.event_form.errors.{{error.message}}")
           .row
             .col-sm-10.col-sm-offset-1
               .form-group
                 button.btn.btn-block.btn-primary.btn-lg(type="submit" disable-on-request=""
-                    ng-disabled="eventForm.$invalid || eventForm.$untouched")
+                    ng-disabled="eventForm.$invalid")
                   = t("app.home.event_form.create")
               p.help-block *&nbsp;
                 = t("app.home.event_form.field_required_help")
