Event details page

--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -1,6 +1,7 @@
 body {
   margin:0;
   font-size: 14px;
+  padding-bottom: 70px;
 }
 
 main .jumbotron {
@@ -19,5 +20,22 @@ main .jumbotron {
   padding-bottom: 10px;
   padding-top: 20px;
   margin-bottom: 20px;
+  font-weight: bold;
+}
+
+.purchase-board {
+  margin-top: 40px;
+
+  .panel-heading {
+    color: @textColor;
+    background-color: @thirdBrandColor;
+  }
+
+  .panel-footer {
+    background: none;
+  }
+}
+
+.text-bold {
   font-weight: bold;
 }
