--- a/src/less/includes/main.less
+++ b/src/less/includes/main.less
@@ -5,7 +5,7 @@
 
 @linkColor: @mainBrandColor;
 @linkHoverColor: darken(@linkColor, 15%);
-@textColor: #5C5C5C;
+@textColor: #555555;
 @headingsColor: @secondBrandColor;
 
 /* Override bootstrap default properties */
@@ -21,10 +21,6 @@ a {
   &:focus {
     color: @linkHoverColor;
   }
-}
-
-h1, h2, h3, h4, h5, h6 {
-  color: @headingsColor;
 }
 
 .inverse {
