--- a/views/templates/index.jade
+++ b/views/templates/index.jade
@@ -56,5 +56,5 @@ main
                     ng-disabled="eventForm.$invalid")
                   = t("app.home.event_form.create")
               p.help-block *&nbsp;
-                = t("app.home.event_form.field_required_help")
+                = t("app.form.field_required_help")
               p.help-block= t("app.home.event_form.email_help")
