--- a/views/index.jade
+++ b/views/index.jade
@@ -6,4 +6,6 @@ block content
 block js
   script(src="/i18next/i18next.js")
   script(src=revision("/genere/js/vendor.js"))
+  script window.angular = require("angular");
   script(src=revision("/genere/js/app.js"))
+  script(src="/bower_components/angular-strap/dist/angular-strap.tpl.min.js")
