Display an alert on purchase added

--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -67,3 +67,15 @@ main .jumbotron {
 .text-bold {
   font-weight: bold;
 }
+
+.alert.top-right {
+  position: fixed;
+  z-index: 1050;
+  margin: 20px;
+  top: 0;
+  right: 0;
+
+  .close {
+    padding-left: 10px;
+  }
+}
