--- a/views/include/layout.jade
+++ b/views/include/layout.jade
@@ -8,6 +8,7 @@ html
     title #{title}
     link(href="//fonts.googleapis.com/css?family=PT+Sans:400,700")
     link(href="/bower_components/bootstrap/dist/css/bootstrap.min.css", rel="stylesheet", type="text/css")
+    link(href="/bower_components/angular-motion/dist/angular-motion.min.css", rel="stylesheet", type="text/css")
     link(href="/bower_components/angular-loading-bar/build/loading-bar.min.css", rel="stylesheet", type="text/css")
     link(href=revision("/genere/css/style.css"), rel="stylesheet", type="text/css")
 
