--- a/src/less/includes/main.less
+++ b/src/less/includes/main.less
@@ -6,6 +6,7 @@
 @linkColor: @mainBrandColor;
 @linkHoverColor: darken(@linkColor, 15%);
 @textColor: #555555;
+@borderColor: #DDDDDD;
 @headingsColor: @secondBrandColor;
 
 /* Override bootstrap default properties */
