--- a/views/templates/event/show.jade
+++ b/views/templates/event/show.jade
@@ -5,10 +5,10 @@ main
       p.lead= t("app.event.with")
         | &nbsp;{{model.stringifyParticipantsNames()}}
 .container.purchase-board
-  .col-sm-4.col-sm-offset-1.col-xs-12
+  .col-md-4.col-md-offset-1.col-sm-6.col-xs-12
     .creation-panel(bs-affix="" data-offset-top="-20")
       include includes/create_purchase_form
-  .col-sm-6.col-xs-12
+  .col-md-6.col-sm-6.col-xs-12
     .panel.panel-default(ng-cloak="" ng-repeat="purchase in model.event.purchases | orderBy:$index:true")
       .panel-heading
         h4
