--- a/views/templates/index.jade
+++ b/views/templates/index.jade
@@ -7,54 +7,54 @@ main
     .container
       p= t("app.home.tyrion")
   .container
-    .row
-      .col-sm-8.col-sm-offset-2
-        form(name="eventForm" ng-submit="model.createEvent(model.event)" novalidate="")
-          .row
-            .col-sm-10.col-sm-offset-1
-              .form-group(element-validation="eventForm.eventName")
-                label(for="inputEventName") *&nbsp;
-                  = t("app.home.event_form.event_name")
-                input#inputEventName.form-control.input-lg(type="text" ng-model="model.event.name" name="eventName"
-                    placeholder=t("app.home.event_form.event_name_ph") required="")
-          .row(ng-cloak="" ng-repeat="participant in model.event.participants")
-            .col-sm-4.col-sm-offset-1
-              .form-group(element-validation="eventForm.participant{{$index}}Name")
-                label(for="inputParticipantName" ng-if="$first") *&nbsp;
-                  = t("app.home.event_form.participant_name")
-                input#inputParticipantName.form-control.input-lg(type="text" ng-model="participant.name"
-                    name="participant{{$index}}Name" placeholder="Kim" required="")
-            .col-sm-4
-              .form-group
-                label(for="inputParticipantEmail" ng-if="$first")= t("app.home.event_form.participant_email")
-                input#inputParticipantEmail.form-control.input-lg(type="email" ng-model="participant.email"
-                    placeholder="kim@email.com")
-            .col-sm-2
-              .form-group(element-validation="eventForm.participant{{$index}}Share")
-                label(for="inputParticipantShare" ng-if="$first") *&nbsp;
-                  = t("app.home.event_form.participant_share")
-                input#inputParticipantShare.form-control.input-lg(type="number" ng-model="participant.share"
-                    name="participant{{$index}}Share" required="" min="1")
-            .col-sm-1(ng-if="!$first")
-              .form-group
-                button.btn.btn-danger.btn-lg(type="button" aria-label=t("app.home.event_form.remove_participant")
-                    ng-click="model.removeParticipant($index)" title=t("app.home.event_form.remove_participant"))
-                  span.glyphicon.glyphicon-minus(aria-hidden="true")
-          .row
-            .col-sm-10.col-sm-offset-1
-              .form-group.text-right
-                button.btn.btn-default.btn-lg(type="button" ng-click="model.addParticipant()")
-                  = t("app.home.event_form.add_participant")
-          .row
-            .col-sm-10.col-sm-offset-1
-              .alert.alert-danger.text-center(ng-cloak="" ng-if="model.errors")
-                div(ng-repeat="error in model.errors" ng-i18next="app.home.event_form.errors.{{error.message}}")
-          .row
-            .col-sm-10.col-sm-offset-1
-              .form-group
-                button.btn.btn-block.btn-primary.btn-lg(type="submit" disable-on-request=""
-                    ng-disabled="eventForm.$invalid")
-                  = t("app.home.event_form.create")
-              p.help-block *&nbsp;
-                = t("app.form.field_required_help")
-              p.help-block= t("app.home.event_form.email_help")
+    .col-md-8.col-md-offset-2.col-sm-10.col-sm-offset-1.col-xs-12
+      form#eventForm(name="eventForm" ng-submit="model.createEvent(model.event)" novalidate="")
+        .row
+          .col-sm-10.col-sm-offset-1.col-xs-12
+            .form-group(element-validation="eventForm.eventName")
+              label(for="inputEventName") *&nbsp;
+                = t("app.home.event_form.event_name")
+              input#inputEventName.form-control.input-lg(type="text" ng-model="model.event.name" name="eventName"
+                  placeholder=t("app.home.event_form.event_name_ph") required="")
+        .row(ng-cloak="" ng-repeat="participant in model.event.participants")
+          hr.visible-xs-block(ng-if="!$first")
+          .col-sm-4.col-sm-offset-1.col-xs-12
+            .form-group(element-validation="eventForm.participant{{$index}}Name")
+              label(for="inputParticipantName" ng-if="$first") *&nbsp;
+                = t("app.home.event_form.participant_name")
+              input#inputParticipantName.form-control.input-lg(type="text" ng-model="participant.name"
+                  name="participant{{$index}}Name" placeholder="Kim" required="")
+          .col-sm-4.col-xs-12
+            .form-group
+              label(for="inputParticipantEmail" ng-if="$first")= t("app.home.event_form.participant_email")
+              input#inputParticipantEmail.form-control.input-lg(type="email" ng-model="participant.email"
+                  placeholder="kim@email.com")
+          .col-sm-2.col-xs-9
+            .form-group(element-validation="eventForm.participant{{$index}}Share")
+              label(for="inputParticipantShare" ng-if="$first") *&nbsp;
+                = t("app.home.event_form.participant_share")
+              input#inputParticipantShare.form-control.input-lg(type="number" ng-model="participant.share"
+                  name="participant{{$index}}Share" required="" min="1")
+          .col-md-1.col-sm-1.col-xs-3(ng-if="!$first")
+            .form-group
+              button.btn.btn-danger.btn-lg(type="button" aria-label=t("app.home.event_form.remove_participant")
+                  ng-click="model.removeParticipant($index)" title=t("app.home.event_form.remove_participant"))
+                span.glyphicon.glyphicon-minus(aria-hidden="true")
+        .row
+          .col-sm-10.col-sm-offset-1.col-xs-12
+            .form-group.text-right
+              button.btn.btn-default.btn-lg(type="button" ng-click="model.addParticipant()")
+                = t("app.home.event_form.add_participant")
+        .row
+          .col-sm-10.col-sm-offset-1.col-xs-12
+            .alert.alert-danger.text-center(ng-cloak="" ng-if="model.errors")
+              div(ng-repeat="error in model.errors" ng-i18next="app.home.event_form.errors.{{error.message}}")
+        .row
+          .col-sm-10.col-sm-offset-1.col-xs-12
+            .form-group
+              button.btn.btn-block.btn-primary.btn-lg(type="submit" disable-on-request=""
+                  ng-disabled="eventForm.$invalid")
+                = t("app.home.event_form.create")
+            p.help-block *&nbsp;
+              = t("app.form.field_required_help")
+            p.help-block= t("app.home.event_form.email_help")
