--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -1,7 +1,6 @@
 body {
   margin:0;
   font-size: 14px;
-  padding-bottom: 30px;
 }
 
 main .jumbotron {
@@ -30,8 +29,10 @@ main .jumbotron {
 .purchase-board {
   margin-top: 40px;
 
-  @media (max-width: @screen-sm-max) {
-    .affix {
+  @media (max-width: @screen-xs-max) {
+    // Kills affix behaviour on xs screen
+    .affix,
+    .affix-bottom {
       position: relative !important;
       top: auto !important;
       width: auto !important;
@@ -44,7 +45,10 @@ main .jumbotron {
     border-radius: 3px;
     padding-left: 15px;
     padding-right: 15px;
-    margin-bottom: 30px;
+
+    @media (max-width: @screen-xs-max) {
+      margin-bottom: 30px;
+    }
 
     .title {
       margin: 15px auto;
@@ -56,10 +60,6 @@ main .jumbotron {
 
     textarea {
       resize: vertical;
-    }
-
-    .form-group .help-block {
-      margin-bottom: 0;
     }
   }
 
@@ -86,5 +86,16 @@ main .jumbotron {
 
   .close {
     padding-left: 10px;
+  }
+}
+
+.page-footer {
+  margin-top: 30px;
+  color: #767676;
+  text-align: right;
+  font-size: 0.8em;
+
+  hr {
+    margin-bottom: 10px;
   }
 }
