Only use affix when the purchases panel is taller otherwise it's buggy

--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -39,7 +39,7 @@ main .jumbotron {
     }
   }
 
-  .creation-panel {
+  .purchase-creation-panel {
     background-color: @thirdBrandColor;
     border: 1px solid @borderColor;
     border-radius: 3px;
