--- a/views/templates/index.jade
+++ b/views/templates/index.jade
@@ -53,7 +53,7 @@ main
           .col-sm-10.col-sm-offset-1.col-xs-12
             .form-group
               button.btn.btn-block.btn-primary.btn-lg(type="submit" disable-on-request=""
-                  ng-disabled="eventForm.$invalid")
+                  data-loading-text=t("app.home.event_form.loading") ng-disabled="eventForm.$invalid")
                 = t("app.home.event_form.create")
             p.help-block *&nbsp;
               = t("app.form.field_required_help")
