--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -1,9 +1,3 @@
-body {
-  margin:0;
-  font-size: 14px;
-  background-color: #F5F5F5;
-}
-
 main .jumbotron {
   text-align: center;
   margin-bottom: 0;
@@ -16,7 +10,7 @@ main .jumbotron {
 
 .jumbo-bar {
   text-align: center;
-  background-color: @thirdBrandColor;
+  background-color: @third-brand-color;
   padding-bottom: 10px;
   padding-top: 20px;
   margin-bottom: 40px;
@@ -41,8 +35,8 @@ main .jumbotron {
   }
 
   .purchase-creation-panel {
-    background-color: @thirdBrandColor;
-    border: 1px solid @borderColor;
+    background-color: @third-brand-color;
+    border: 1px solid @border-color;
     border-radius: 3px;
     padding-left: 15px;
     padding-right: 15px;
@@ -65,8 +59,8 @@ main .jumbotron {
   }
 
   .panel-heading {
-    color: @textColor;
-    background-color: @thirdBrandColor;
+    color: @text-color;
+    background-color: @third-brand-color;
   }
 
   .panel-footer {
@@ -100,21 +94,9 @@ main .jumbotron {
       margin-top: 20px;
 
       .total-row {
-        border-top: 2px solid @borderColor;
+        border-top: 2px solid @border-color;
       }
     }
-  }
-}
-
-.alert.top-right {
-  position: fixed;
-  z-index: 1050;
-  margin: 20px;
-  top: 0;
-  right: 0;
-
-  .close {
-    padding-left: 10px;
   }
 }
 
