--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,4 +1,62 @@
-@import "includes/media";
-@import "includes/main";
+@bower-components-directory: "../../public/bower_components";
+@bootstrap-less-directory: "@{bower-components-directory}/bootstrap/less";
+@angular-motion-src-directory: "@{bower-components-directory}/angular-motion/src";
+
+
+@import "@{bootstrap-less-directory}/variables";
+@import "@{bootstrap-less-directory}/mixins";
+@import "@{bootstrap-less-directory}/normalize";
+@import "@{bootstrap-less-directory}/print";
+@import "@{bootstrap-less-directory}/glyphicons";
+@import "@{bootstrap-less-directory}/scaffolding";
+@import "@{bootstrap-less-directory}/type";
+//@import "@{bootstrap-less-directory}/code";
+@import "@{bootstrap-less-directory}/grid";
+@import "@{bootstrap-less-directory}/tables";
+@import "@{bootstrap-less-directory}/forms";
+@import "@{bootstrap-less-directory}/buttons";
+@import "@{bootstrap-less-directory}/component-animations";
+@import "@{bootstrap-less-directory}/dropdowns";
+@import "@{bootstrap-less-directory}/button-groups";
+@import "@{bootstrap-less-directory}/input-groups";
+//@import "@{bootstrap-less-directory}/navs";
+//@import "@{bootstrap-less-directory}/navbar";
+//@import "@{bootstrap-less-directory}/breadcrumbs";
+//@import "@{bootstrap-less-directory}/pagination";
+//@import "@{bootstrap-less-directory}/pager";
+//@import "@{bootstrap-less-directory}/labels";
+//@import "@{bootstrap-less-directory}/badges";
+@import "@{bootstrap-less-directory}/jumbotron";
+//@import "@{bootstrap-less-directory}/thumbnails";
+@import "@{bootstrap-less-directory}/alerts";
+//@import "@{bootstrap-less-directory}/progress-bars";
+//@import "@{bootstrap-less-directory}/media";
+//@import "@{bootstrap-less-directory}/list-group";
+@import "@{bootstrap-less-directory}/panels";
+//@import "@{bootstrap-less-directory}/responsive-embed";
+//@import "@{bootstrap-less-directory}/wells";
+@import "@{bootstrap-less-directory}/close";
+@import "@{bootstrap-less-directory}/modals";
+//@import "@{bootstrap-less-directory}/tooltip";
+@import "@{bootstrap-less-directory}/popovers";
+//@import "@{bootstrap-less-directory}/carousel";
+@import "@{bootstrap-less-directory}/utilities";
+@import "@{bootstrap-less-directory}/responsive-utilities";
+
+
+@import (less) "@{bower-components-directory}/angular-loading-bar/src/loading-bar.css";
+
+
+//@import "@{angular-motion-src-directory}/collapse/collapse";
+@import "@{angular-motion-src-directory}/fade/fade";
+//@import "@{angular-motion-src-directory}/fade-and-scale/fade-and-scale";
+@import "@{angular-motion-src-directory}/fade-and-slide/fade-and-slide";
+//@import "@{angular-motion-src-directory}/flip/flip";
+//@import "@{angular-motion-src-directory}/slide/slide";
+
+
+@import "includes/variables";
 @import "includes/angular";
+@import "includes/main";
+@import "includes/angular-strap";
 @import "includes/element";
