--- a/views/templates/error/default.jade
+++ b/views/templates/error/default.jade
@@ -2,4 +2,6 @@
   h1= t("app.errors.default.title")
   p= t("app.errors.default.message")
   p
-    a.btn.btn-primary.btn-lg(href="#/", type="button")= t("app.errors.default.action")
+    a.btn.btn-primary.btn-lg(href="#/", type="button")
+      span.glyphicon.glyphicon-home(aria-hidden="true")
+      | &nbsp;#{t("app.errors.default.action")}
