--- a/src/less/includes/main.less
+++ b/src/less/includes/main.less
@@ -36,6 +36,18 @@ a {
   }
 }
 
+.section-common {
+  padding: 40px 0;
+}
+
+.section-title {
+  text-align: center;
+  font-weight: 300;
+  margin: 0 0 30px;
+  font-size: 30px;
+  line-height: 35px;
+}
+
 .text-bold {
   font-weight: bold;
 }
