--- a/views/templates/event/includes/create_purchase_form.jade
+++ b/views/templates/event/includes/create_purchase_form.jade
@@ -23,9 +23,9 @@ form(name="pchCtrl.form" ng-controller="AddPurchaseController as pchCtrl" novali
         label(for="inputPurchasePurchaser") *&nbsp;
           = t("app.event.purchase_form.purchaser")
         br
-        button#inputPurchasePurchaser.btn.btn-default(type="button" ng-model="pchCtrl.purchase.purchaser" bs-select=""
+        button#inputPurchasePurchaser.btn.btn-default(type="button" ng-model="pchCtrl.purchase.purchaserId" bs-select=""
             data-placeholder=t("app.event.purchase_form.purchaser_ph") name="purchasePurchaser" required=""
-            bs-options="participant.name as participant.name for participant in model.event.participants")
+            bs-options="participant.id as participant.name for participant in model.event.participants")
       .form-group(element-validation="pchCtrl.form.purchaseParticipants")
   .row
     .col-xs-12
@@ -33,13 +33,13 @@ form(name="pchCtrl.form" ng-controller="AddPurchaseController as pchCtrl" novali
         label(for="inputPurchaseParticipants") *&nbsp;
           = t("app.event.purchase_form.share_with.label")
         br
-        button#inputPurchaseParticipants.btn.btn-default(type="button" ng-model="pchCtrl.purchase.participants"
+        button#inputPurchaseParticipants.btn.btn-default(type="button" ng-model="pchCtrl.purchase.participantsIds"
             bs-select="" data-multiple="1" data-all-none-buttons="true" name="purchaseParticipants"
             data-all-text=t("app.event.purchase_form.share_with.all") required="" data-max-length="4"
             data-none-text=t("app.event.purchase_form.share_with.none")
             data-max-length-html=t("app.event.purchase_form.share_with.selected")
             data-placeholder=t("app.event.purchase_form.share_with.ph")
-            bs-options="participant.name as participant.name for participant in model.event.participants")
+            bs-options="participant.id as participant.name for participant in model.event.participants")
   .row
     .col-xs-12
       .form-group
