--- a/views/templates/result/show.jade
+++ b/views/templates/result/show.jade
@@ -7,14 +7,13 @@ main
     .col-lg-8.col-lg-offset-2.btn-header
       a.btn.btn-default(type="button" ng-href="#/events/{{model.event.id}}" title=t("app.debts.back"))
         span.glyphicon.glyphicon-arrow-left(aria-hidden="true")
-        | &nbsp;
-        = t("app.debts.back")
-  .row.participant-result(ng-repeat="(participant_id, participant_results) in model.results")
+        | &nbsp;#{t("app.debts.back")}
+  .row.participant-result(ng-repeat="(participantId, participantResults) in model.results")
     .result-box.col-lg-8.col-lg-offset-2.col-xs-12
       .col-lg-6.col-sm-6.col-xs-12
-        h2 {{participant_id}}
+        h2 {{model.findParticipantName(participantId)}}
         p= t("app.debts.total_spent")
-          span.text-bold  {{participant_results.total_spent | currency:'€':2}}</span>
+          span.text-bold  {{participantResults.totalSpent | currency:'€':2}}</span>
       .col-lg-6.col-sm-6.col-xs-12
         .table-responsive
           table.table.table-striped
@@ -23,10 +22,10 @@ main
                 th= t("app.debts.creditor")
                 th= t("app.debts.debt")
             tbody
-              tr(ng-repeat="(creditor_id, debt_amount) in participant_results.debts_detail"
-                  ng-class="[debt_amount > 0 ? 'danger' : 'success']")
-                th(scope="row") {{creditor_id}}
-                td {{debt_amount | currency:'€':2}}
+              tr(ng-repeat="(creditorId, debtAmount) in participantResults.debtsDetail"
+                  ng-class="[debtAmount > 0 ? 'danger' : 'success']")
+                th(scope="row") {{model.findParticipantName(creditorId)}}
+                td {{debtAmount | currency:'€':2}}
               tr.total-row
                 th(scope="row")= t("app.debts.total")
-                td.text-bold {{participant_results.total_debt | currency:'€':2}}
+                td.text-bold {{participantResults.totalDebt | currency:'€':2}}
