--- a/views/templates/index.jade
+++ b/views/templates/index.jade
@@ -46,9 +46,9 @@ main
                 button.btn.btn-default.btn-lg(type="button" ng-click="model.addParticipant()")
                   span.glyphicon.glyphicon-plus(aria-hidden="true")
                   | &nbsp;#{t("app.home.event_form.add_participant")}
-          .row
+          .row(ng-cloak="" ng-if="model.errors")
             .col-sm-10.col-sm-offset-1.col-xs-12
-              .alert.alert-danger.text-center(ng-cloak="" ng-if="model.errors")
+              .alert.alert-danger.text-center
                 div(ng-repeat="error in model.errors" ng-i18next="app.home.event_form.errors.{{error.message}}")
           .row
             .col-sm-10.col-sm-offset-1.col-xs-12
