Put the result line color logic in a directive

--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -91,8 +91,10 @@ main .jumbotron {
 
     .table-responsive {
       margin-top: 20px;
+    }
 
-      .total-row {
+    table {
+      tfoot {
         border-top: 2px solid @border-color;
       }
     }
