--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -20,7 +20,7 @@ main .jumbotron {
   border-top: 5px solid #EEEEEE;
 }
 
-.purchase-board {
+.expense-board {
   margin-top: 40px;
 
   @media (max-width: @screen-xs-max) {
@@ -33,7 +33,7 @@ main .jumbotron {
     }
   }
 
-  .purchase-creation-panel {
+  .expense-creation-panel {
     background-color: @third-brand-color;
     border: 1px solid @border-color;
     border-radius: 3px;
