--- a/views/templates/event/show.jade
+++ b/views/templates/event/show.jade
@@ -2,7 +2,8 @@ main
   .jumbotron.inverse
     .container
       h1 {{model.event.name}}
-      p.lead #{t("app.event.with")} {{model.stringifyEventParticipantsNames()}}
+      p(ng-cloak="").lead #{t("app.event.with")}&nbsp;
+        span(debts-inline-data="model.event.participants::name")
 .container.expense-board
   .row
     .col-md-4.col-md-offset-5
