Load expenses progressively

--- a/views/templates/event/includes/expenses_list_panel.jade
+++ b/views/templates/event/includes/expenses_list_panel.jade
@@ -10,3 +10,5 @@
       p #{t("app.event.shared_between")}&nbsp;
         span.text-bold(debts-inline-data="expense.participantsNames")
     .panel-footer(ng-if="expense.description") {{expense.description}}
+  .row.text-center
+    button.btn.btn-default(ng-click="xpensList.loadMore()" ng-disabled="xpensList.allLoaded")= t("app.event.load_more")
