--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -1,16 +1,20 @@
-main .jumbotron {
+.jumbotron {
   text-align: center;
   margin-bottom: 0;
 
   h1 {
-    text-transform: lowercase;
     font-variant: small-caps;
+  }
+
+  .dashboard & {
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 }
 
 .jumbo-bar {
   text-align: center;
-  background-color: @third-brand-color;
+  background-color: @second-brand-color;
   padding-bottom: 10px;
   padding-top: 20px;
   font-weight: bold;
@@ -34,32 +38,31 @@ main .jumbotron {
   }
 
   .expense-creation-panel {
-    background-color: @third-brand-color;
-    border: 1px solid @border-color;
+    background-color: @panel-bg;
+    border: 1px solid @main-brand-color;
     border-radius: 3px;
-    padding-left: 15px;
-    padding-right: 15px;
 
     @media (max-width: @screen-xs-max) {
       margin-bottom: 30px;
     }
 
-    .title {
-      margin: 15px auto;
-      width: 75%;
+    &-heading {
+      padding-top: 15px;
+      padding-bottom: 15px;
+      margin-bottom: 15px;
       font-size: 1.2em;
       font-weight: 400;
       text-align: center;
     }
 
-    textarea {
+    &-body, &-footer {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+
+    &-body textarea {
       resize: vertical;
     }
-  }
-
-  .panel-heading {
-    color: @text-color;
-    background-color: @third-brand-color;
   }
 
   .panel-footer {
