--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -1,11 +1,14 @@
 @icon-font-path: "/bower_components/bootstrap/fonts/";
 
-@main-brand-color: #2D97CC;
-@second-brand-color: #296796;
-@third-brand-color: lighten(@main-brand-color, 40%);
+@main-brand-color: #FF895D;
+@second-brand-color: #D5EEFF;
+@third-brand-color: #78BBE6;
+@fourth-brand-color: #1B435D;
 @inverse-brand-color: #FFFFFF;
 
-@link-color: @main-brand-color;
-@link-hover-color: darken(@link-color, 15%);
 @text-color: #555555;
 @border-color: #DDDDDD;
+
+@brand-primary: @main-brand-color;
+
+@input-border-focus: @main-brand-color;
