--- a/views/templates/event/includes/expense_creation_panel.jade
+++ b/views/templates/event/includes/expense_creation_panel.jade
@@ -1,60 +1,61 @@
 .expense-creation-panel(affix-panel="" data-offset-top="-20")
-  form(name="xpensCtrl.form" ng-controller="AddExpenseController as xpensCtrl" novalidate=""
-      ng-submit="xpensCtrl.addExpense(model.event, xpensCtrl.expense)")
-    p.title= t("app.event.expense_form.title")
-    .row
-      .col-xs-12
-        .form-group(element-validation="xpensCtrl.form.expenseLabel")
-          label(for="inputExpenseLabel") *&nbsp;
-            = t("app.event.expense_form.label")
-          input#inputExpenseLabel.form-control(type="text" ng-model="xpensCtrl.expense.label"
-              name="expenseLabel" placeholder=t("app.event.expense_form.label_ph") required="")
-    .row
-      .col-sm-6.col-xs-7(element-validation="xpensCtrl.form.expenseAmount")
-        .form-group
-          label(for="inputExpenseAmount") *&nbsp;
-            = t("app.event.expense_form.amount")
-          .input-group
-            .input-group-addon €
-            input#intputExpenseAmount.form-control.text-right(ng-model="xpensCtrl.expense.amount" required=""
-                placeholder=t("app.event.expense_form.amount_ph") name="expenseAmount" currency-validation="")
-            .input-group-addon()= t("app.event.expense_form.amount_precision")
-      .col-sm-6.col-xs-12(element-validation="xpensCtrl.form.expensePurchaser")
-        .form-group
-          label(for="inputExpensePurchaser") *&nbsp;
-            = t("app.event.expense_form.purchaser")
-          br
-          button#inputExpensePurchaser.btn.btn-default(type="button" ng-model="xpensCtrl.expense.purchaserUuid"
-              bs-select="" data-placeholder=t("app.event.expense_form.purchaser_ph") name="expensePurchaser" required=""
-              bs-options="participant.id as participant.name for participant in model.event.participants")
-        .form-group(element-validation="xpensCtrl.form.expenseParticipants")
-    .row
-      .col-xs-12
-        .form-group
-          label(for="inputExpenseParticipants") *&nbsp;
-            = t("app.event.expense_form.share_with.label")
-          br
-          button#inputExpenseParticipants.btn.btn-default(type="button" ng-model="xpensCtrl.expense.participantsUuids"
-              bs-select="" data-multiple="1" data-all-none-buttons="true" name="expenseParticipants"
-              data-all-text=t("app.event.expense_form.share_with.all") required="" data-max-length="4"
-              data-none-text=t("app.event.expense_form.share_with.none")
-              data-max-length-html=t("app.event.expense_form.share_with.selected")
-              data-placeholder=t("app.event.expense_form.share_with.ph")
-              bs-options="participant.id as participant.name for participant in model.event.participants")
-    .row
-      .col-xs-12
-        .form-group
-          textarea.form-control(ng-model="xpensCtrl.expense.description" rows="3"
-              placeholder=t("app.event.expense_form.description_ph"))
-    .row(ng-cloak="" ng-if="xpensCtrl.errors")
-      .col-xs-12
-        .alert.alert-danger.text-center
-          div(ng-repeat="error in xpensCtrl.errors" ng-i18next="app.event.expense_form.errors.{{error.message}}")
-    .row
-      .col-xs-12
-        .form-group
-          button.btn.btn-block.btn-primary(type="submit" disable-on-request="" ng-disabled="xpensCtrl.form.$invalid"
-              data-loading-text=t("app.event.expense_form.loading"))
-            = t("app.event.expense_form.submit")
-    p.text-muted *&nbsp;
-      = t("app.form.field_required_help")
+  .expense-creation-panel-heading.inverse= t("app.event.expense_form.title")
+  .expense-creation-panel-body
+    form(name="xpensCtrl.form" ng-controller="AddExpenseController as xpensCtrl" novalidate=""
+        ng-submit="xpensCtrl.addExpense(model.event, xpensCtrl.expense)")
+      .row
+        .col-xs-12
+          .form-group(element-validation="xpensCtrl.form.expenseLabel")
+            label(for="inputExpenseLabel") *&nbsp;
+              = t("app.event.expense_form.label")
+            input#inputExpenseLabel.form-control(type="text" ng-model="xpensCtrl.expense.label"
+                name="expenseLabel" placeholder=t("app.event.expense_form.label_ph") required="")
+      .row
+        .col-sm-6.col-xs-7(element-validation="xpensCtrl.form.expenseAmount")
+          .form-group
+            label(for="inputExpenseAmount") *&nbsp;
+              = t("app.event.expense_form.amount")
+            .input-group
+              .input-group-addon €
+              input#intputExpenseAmount.form-control.text-right(ng-model="xpensCtrl.expense.amount" required=""
+                  placeholder=t("app.event.expense_form.amount_ph") name="expenseAmount" currency-validation="")
+              .input-group-addon()= t("app.event.expense_form.amount_precision")
+        .col-sm-6.col-xs-12(element-validation="xpensCtrl.form.expensePurchaser")
+          .form-group
+            label(for="inputExpensePurchaser") *&nbsp;
+              = t("app.event.expense_form.purchaser")
+            br
+            button#inputExpensePurchaser.btn.btn-default(type="button" ng-model="xpensCtrl.expense.purchaserUuid"
+                bs-select="" data-placeholder=t("app.event.expense_form.purchaser_ph") name="expensePurchaser" required=""
+                bs-options="participant.id as participant.name for participant in model.event.participants")
+          .form-group(element-validation="xpensCtrl.form.expenseParticipants")
+      .row
+        .col-xs-12
+          .form-group
+            label(for="inputExpenseParticipants") *&nbsp;
+              = t("app.event.expense_form.share_with.label")
+            br
+            button#inputExpenseParticipants.btn.btn-default(type="button" ng-model="xpensCtrl.expense.participantsUuids"
+                bs-select="" data-multiple="1" data-all-none-buttons="true" name="expenseParticipants"
+                data-all-text=t("app.event.expense_form.share_with.all") required="" data-max-length="4"
+                data-none-text=t("app.event.expense_form.share_with.none")
+                data-max-length-html=t("app.event.expense_form.share_with.selected")
+                data-placeholder=t("app.event.expense_form.share_with.ph")
+                bs-options="participant.id as participant.name for participant in model.event.participants")
+      .row
+        .col-xs-12
+          .form-group
+            textarea.form-control(ng-model="xpensCtrl.expense.description" rows="3"
+                placeholder=t("app.event.expense_form.description_ph"))
+      .row(ng-cloak="" ng-if="xpensCtrl.errors")
+        .col-xs-12
+          .alert.alert-danger.text-center
+            div(ng-repeat="error in xpensCtrl.errors" ng-i18next="app.event.expense_form.errors.{{error.message}}")
+      .row
+        .col-xs-12
+          .form-group
+            button.btn.btn-block.btn-primary(type="submit" disable-on-request="" ng-disabled="xpensCtrl.form.$invalid"
+                data-loading-text=t("app.event.expense_form.loading"))
+              = t("app.event.expense_form.submit")
+  .expense-creation-panel-footer
+    p.text-muted * #{t("app.form.field_required_help")}
