--- a/views/templates/index.jade
+++ b/views/templates/index.jade
@@ -55,6 +55,7 @@ main
               .form-group
                 button.btn.btn-block.btn-primary.btn-lg(type="submit" disable-on-request=""
                     data-loading-text=t("app.home.event_form.loading") ng-disabled="eventForm.$invalid")
-                  = t("app.home.event_form.create")
+                  span.glyphicon.glyphicon-ok-circle(aria-hidden="true")
+                  |  #{t("app.home.event_form.create")}
               p.help-block * #{t("app.form.field_required_help")}
               p.help-block= t("app.home.event_form.email_help")
