--- a/views/templates/result/show.jade
+++ b/views/templates/result/show.jade
@@ -1,7 +1,7 @@
 main
   .jumbotron.inverse
     .container
-      h1 {{model.event.name}}
+      h1 {{::model.event.name}}
 .container.result-board
   .row
     .col-lg-8.col-lg-offset-2.btn-header
@@ -11,9 +11,9 @@ main
   .row.participant-result(ng-repeat="participantResults in model.result")
     .result-box.col-lg-8.col-lg-offset-2.col-xs-12
       .col-lg-6.col-sm-6.col-xs-12
-        h2 {{participantResults.participantName}}
+        h2 {{::participantResults.participantName}}
         p= t("app.debts.total_spent")
-          span.text-bold  {{participantResults.totalSpent | currency:'€':2}}</span>
+          span.text-bold  {{::participantResults.totalSpent | currency:'€':2}}</span>
       .col-lg-6.col-sm-6.col-xs-12
         .table-responsive
           table.table
@@ -22,10 +22,10 @@ main
                 th= t("app.debts.creditor")
                 th= t("app.debts.debt")
             tbody
-              tr(ng-repeat="debt in participantResults.debtsDetail" debts-visual-indicator="")
-                th(scope="row") {{debt.creditorName}}
-                td {{debt.amount | currency:'€':2}}
+              tr(ng-repeat="debt in ::participantResults.debtsDetail" debts-visual-indicator="")
+                th(scope="row") {{::debt.creditorName}}
+                td {{::debt.amount | currency:'€':2}}
             tfoot
               tr
                 th(scope="row")= t("app.debts.total")
-                td.text-bold {{participantResults.totalDebt | currency:'€':2}}
+                td.text-bold {{::participantResults.totalDebt | currency:'€':2}}
