Routing with angular-ui-router instead of angular-route

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends include/layout
 block content
   .content
-    ng-view(autoscroll="")
+    ui-view(autoscroll="")
 
 block js
   script(src="/i18next/i18next.js")
