--- a/views/templates/error/404.jade
+++ b/views/templates/error/404.jade
@@ -3,6 +3,6 @@
   p= t("app.errors.404.message")
     |  (404)
   p
-    a.btn.btn-primary.btn-lg(href="#/", type="button")
+    a.btn.btn-primary.btn-lg(ui-sref="home", type="button")
       span.glyphicon.glyphicon-home(aria-hidden)
       | &nbsp;#{t("app.errors.404.action")}
