--- a/views/templates/error/default.jade
+++ b/views/templates/error/default.jade
@@ -2,6 +2,6 @@
   h1= t("app.errors.default.title")
   p= t("app.errors.default.message")
   p
-    a.btn.btn-primary.btn-lg(href="#/", type="button")
+    a.btn.btn-primary.btn-lg(ui-sref="home", type="button")
       span.glyphicon.glyphicon-home(aria-hidden="true")
       | &nbsp;#{t("app.errors.default.action")}
